--- a/index.html
+++ b/index.html
@@ -6,9 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josue Tejada Romero</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="">
 </head>
 <body>
     
+    <div class="wrapper">
+        <header>
+            <nav class="navbar" >
+                <div class="brand">
+                    <h2>J <span>T</span> </h2>
+                </div>
+                <ul class="menu" >
+                    <li><a class="active" href="#">Home</a></li>
+                    <li><a href="#">About me</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main">
+            <div class="info-content">
+            <h1>I'm <span>Josue</span> Tejada</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis enim ac massa hendrerit pellentesque sed in erat.Proin rhoncus purus metus, ac tempor nulla commodo in. Phasellus bibendum tempor dolor, scelerisque tempor magna placerat id. Etiam eget viverra elit.</p>
+            <a download-cv href="#">
+                <button class="download-cv">Download CV</button>
+            </a>
+            </div>
+            <img src="./img/pexels-photo-1516680-removebg-preview.png" alt="Josue Tejada picture">
+        </main>
+    </div>
+    
+    <div class="about">
+        <img src="./img/about.png" alt="Josue Tejada image"> 
+        <div class="about-info">
+            <h2>About me</h2>
+            <div class="divider"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis enim ac massa hendrerit pellentesque sed in erat.Proin rhoncus purus metus, ac tempor nulla commodo in. Phasellus bibendum tempor dolor, scelerisque tempor magna placerat id. Etiam eget viverra elit. Praesent quis enim ac massa hendrerit pellentesque sed in erat.Proin rhoncus purus metus, ac tempor nulla commodo in.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis enim ac massa hendrerit pellentesque sed in erat.Proin rhoncus purus metus, ac tempor nulla commodo in. Phasellus bibendum tempor dolor, scelerisque tempor magna placerat id.</p>
+            <button class="download-cv">Read more</button>
+        </div>
+    </div>
+
+    <div class="portfolio">
+        <div class="portfolio-headings">
+            <h2>My portfolio</h2>
+            <div class="divider"></div>
+        </div>
+
+
+        <div class="container">
+            <div class="card">
+                <div class="card__img">
+                    <h2>Proyect Description</h2>
+                </div>
+                <div class="projects-links">
+                    <a href="#">
+                        <i class="icon-github"></i>
+                    </a>
+                    <a href="#">
+                        <i class="icon-globe"></i>
+                    </a>
+                    <a href="#">
+                        <i>icon-code</i>
+                    </a>
+                </div>
+                <button class="project-details">
+                    Project-details
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
